# TextViewer

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  TODO.md  TextViewer_zh_CN.ts  aboutbox.cpp  aboutbox.h  aboutbox.ui  config.cpp  config.h  lineheightdialog.cpp  lineheightdialog.h  lineheightdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recentlist.cpp  recentlist.h  utils.h  viewer.cpp  viewer.h
res/: TextViewer.rc  textviewer.qrc
tests/: CMakeLists.txt  test_config.cpp  test_mainwindow.cpp  test_recentlist.cpp  test_viewer.cpp
